--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ php: [7.3]
 before_script: 
   - composer self-update -q
   - if [ -n "$GITHUB_TOKEN" ]; then composer config github-oauth.github.com ${GITHUB_TOKEN}; fi;
-  - composer -vvv update --prefer-dist 
+  - composer -vv update --prefer-dist 
   - composer show -i
 script: php "okay/Sql.ok/_ok.php" -I
