New System Unix context

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "classmap": [
             "persistence\/",
             "io\/",
+            "system\/",
             "stage\/"
         ]
     },
